# University_integrated_crypto-payment

./: .gitignore  db.sqlite3  manage.py  pyproject.toml
University_website/: asgi.py  settings.py  urls.py  wsgi.py
home_app/: apps.py  urls.py  views.py
static/css/: material-icons.css  style.css
static/images/: apple-touch-icon-114x114.html  apple-touch-icon.html  favicon.html
static/js/: jquery.nicescroll.min.js  modernizr.custom.js
templates/: base.html  base2.html  footer.html  header.html  home.html  login.html  student-dashboard.html  success.html
